what kind of game maker

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -95,6 +95,7 @@ title: 4. Exploration of the Formative Learning Design Process
 ## Research Questions - April 2024
 
 ~1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?~
+
 1. What ~barriers~ contradictions arose in participation in this research's game coding processes and what pedagogical tools and processes are available to address these contradictions?
 2. How can game design patterns support the development of coding practices with novices?
 3. How can learners build agency in an evolving community of game makers?
@@ -210,7 +211,7 @@ In the 3 foci model Rogoff refers to apprenticeship as a way of illustrating the
 - Shared repositories of resources - users shared a log in so they could see the work created by others.
 - Showcase: At the end of the game making process students asked strangers to play their game in the foyer of my departmental building
 - Drama Games: the process of warming up, creates community and sets a tone
-- Drama Process: specifically designed ot overcome limits of the classroom.
+- Drama Process: specifically designed ot  overcome limits of the classroom.
 - Playtesting: the process of playtesting, either self or peer links back to a community purpose
  -->
 
@@ -515,7 +516,8 @@ While this is an informal way of using maps the are other approaches that are mo
 _Map of Learning Dimensions of the 3M Game Making Approach_
  -->
 
- <!-- **Including Coding Concepts in the Learning Map and including Code Cards with links to online Concepts**
+ <!-- **Including Coding Concepts in the LearninThe later section of the vignette shows evidence of elements of an emerging ideoculture of this group. A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared ideoculture of the game making commmunity. The complexities of processes to create adn to help resolve contradictions as this cultural domain of collective making are explored later in this chapter.
+g Map and including Code Cards with links to online Concepts**
 
  Recap here the choice of coding concepts rather that CT in more abstract terms.
 
@@ -535,7 +537,8 @@ I am currently investigating replicating the use of maps process using online to
 
 
 
-<!-- Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators. -->
+<!-- Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assessThe later section of the vignette shows evidence of elements of an emerging ideoculture of this group. A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared ideoculture of the game making commmunity. The complexities of processes to create adn to help resolve contradictions as this cultural domain of collective making are explored later in this chapter.
+ and support learning. A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators. -->
 
 
 <!-- Challenges adapting resources to a curriculum environment
@@ -548,7 +551,8 @@ There were some additional changes in the way that design patterns were presente
 |Facilitator stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.  | Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators|
 |  Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. | A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.  |   |
 |  Challenges adapting resources to a curriculum environment |  There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map. |   
-|Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   |  Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)|    -->
+|Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   |  Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the The later section of the vignette shows evidence of elements of an emerging ideoculture of this group. A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared ideoculture of the game making commmunity. The complexities of processes to create adn to help resolve contradictions as this cultural domain of collective making are explored later in this chapter.
+game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)|    -->
 
 
 
@@ -568,6 +572,18 @@ Examples include;
 For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
 
 
+## Summative narrative description of evolution by phaser
+
+I feel here a tension in communicating clearly and retaining some of the surprise of a narrative. I feel like this table tells the story too soon.  
+
+A similar table in the previous chapter table of phases this one is about tool and documentation use in particular. For completeness and data replicability, and as a practice of openly sharing educational resources. A fuller table in the appendix links to different online versions of documentation and tools uses. All are free and as based on web standards are unlikely to decay, a process that unfortunately occurs too often, making replicating or even investigating out of curiosity the tools used in may studies impossible.    
+
+**Phase, Name and Date**| **Description** | **Starting Resources**         
+|--------|------------|--------------|
+|P1: Oct 2017 - Dec 2018; Experimental Course  | Participants started with no set plan or toolset and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. After several weeks, a minimal incomplete starting game code template was introduced in response to student need.  Then One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students and the creation of a “half baked” game template |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
+| P2: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
+| P3: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
+| P4: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
 
 
 ## Contradictions involving the use of game programming and asset authoring tools
@@ -578,6 +594,15 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 Activity theory has a broad definition of the concept of tool which in this context would include the use of language, concepts, supporting resources and production processes. While forms of documentation and supporting resources are explored in the following section, this section focuses on software tools and code framework used to create games in this program.    
 
+
+### Situating tool use by phase
+
+Insert table of tool use or link to this as an appendix.
+
+
+
+
+### Narrative description of the area of contradiction
 Contradictions arose between the need of participants to use key tools to create games and their lack of experience of them. Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. While this is to be expected given the novice status of the participants, contextual factors complicate this contradiction further. For example, the process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools (explored in the introduction).
 
 While, gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting encouraged me to prioritise approaches which avoided written or to whole class instruction. My motivations here were also supported by experiences in P1 documented in my journal. I found attempts to convene attention on a presentation screen for instruction based teaching to class uncomfortable, stemming from my judgement that these interventions to be unwelcome interruptions for the participants making activities.  
@@ -1158,14 +1183,22 @@ An additional rationale for this process was to help reduce potential internal b
 
 ## Responding to tensions and barriers in cultural aspects of the game making activity
 
-### Conflicts due to identity clashes and dysfunctional group work
+
+
+
+**Narrative summary of conflict:**
+
+### Design narrative on conflict due to identity clashes and dysfunctional group work
 
 <!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),** -->
 
 <!-- In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework. -->
 MAKE MORE OF THE P1 -> P2 SHIFT AT START
 
-**Narrative summary of conflict:**
+
+
+#### Shift from p1 - p2 -  
+
 
 This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. These contradictions involved accumulating tensions which resulted in families feeling anxiety and alienation from the group coding environment and associated peer working dynamics. My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. These are detailed later.
 
@@ -1180,6 +1213,9 @@ Some barriers stemming from alienation from participant group working processes 
 The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Together with the frustrations of complexities of larger group work the restrictions created a tension between the suggested community norm of how division of labour was organised.
 
 Thus in P2, rather than the larger groups of P1, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group fragmentation and encouraging freedom of participation vs benefiting from parental involvement.
+
+P2 introduced some of the changes
+- Keeping games working to allow for less frustation - this promoted more playtestin time. explored next.
 
 
 
@@ -1274,6 +1310,58 @@ There is convincing research on on how online community  can engender feelings o
 A primary concern here were the time consideration of the process of being involved in an online community may remove time spent doing real life playtesting. Also there is a danger that, the diversity of creations available on a online community  could remove the more communal experience of the designed limitations.
 
 More pragmatically, in this situation the use of a more professional framework, and a lack of dedicated site run for children reduced the scope for this kind of interaction.   
+
+### Shift to P3 Drama process and what kind of Maker are you
+
+By the end of p2 most of the tools and main processes were in place.
+
+But I still felt tensions around introducing reflective processes and wanted to de-centre myself where possible from a teacher position.
+
+Before talking about drama process which addressed this in varies ways.
+
+A smaller intervention was a game and at kind of player are you.
+
+A game introduced in P2 where participants took part in an interactive the Bartle test. The Bartle test draws on work which ...
+
+The full process and rationale and initial reactions are detailed in appendix 4.x . In summary,
+
+After the process I then proposed that there different game maker types and asked participants to evaluate and discuss with peers what kind of game maker they were. From the following list.
+
+-   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
+- **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
+-   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
+-   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
+
+
+
+This simple question "What kind of game maker are you?" - is a good indicator to others that you are trying to create a space where different approaches are possible and celebrated.
+
+I incorporated it into an animation of the resources home page.
+
+![Illustration 4.x - What kind of game maker are you  ](./Pictures/kindofgamemaker.png){width=95%}
+
+
+<!-- #### A game encouraging maker / player types
+
+The drama process work in P3 to develop ways to encourage diverse and playful approaches to making had its roots in a game introduced in P2 where participants took part in an interactive the Bartle test. The Bartle test draws on work which ...
+
+The full process and rationale and initial reactions are detailed in appendix 4.x . In summary,
+
+The process was very engaging, parents responded that the process gave them new insight into the digital identities of their children. As part of the process I then proposed that there different game maker types and asked participants to evaluate and discuss with peers what kind of game maker they were. From the following list.
+
+-   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
+- **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
+-   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
+-   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
+
+
+DATA REQUIRED FROM VIDEO!?
+
+This self evaluation helped confirm my own observations of different motivations driving different participation behaviours. Fuller discussion follows in chapter six.
+
+The success of activity spurred the creation of the creation of side-missions to be carried out in from of a dramatic process.
+
+AND - link more -->
 
 ### On a drama processes
 
