intro to design

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -132,12 +132,13 @@ NOTE
 I originally structured the chapter around observations structured in the phases described in chapter three. This approach proved over-complicated, mixing the description of tensions which often spanned multiple phases.
 
 --- -->
-
-
 <!-- Due to the novel nature of the learning design, a detailed outline of the specifics of the participants experience of the design helps readers situate  the findings of the following two chapters. -->
 
-In line with key techniques of third generation activity theory (3GAT), this chapter addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design. This chapter contains a high level of detail on the technical elements of the learning design to both both helps situate the findings of the next chapter and to allow the design to be by other practitioners and researchers in this area.
+This chapter contains a high level of detail on the technical elements of the learning design to both both helps situate the findings of the next chapter. As explored in the last chapter this thick description and to allow the design to be by other practitioners and researchers in this area.
 
+To address these, the format of this chapter can be conceived as a design narrative [@hoadley_creating_2002]. To do to this I inlcude narrative ddescriptions of shifts between phases of design as it mutually evolved over time.
+
+While the concept of design narrative is in lnie with DBR ethos, it is not a formal or well explored area. Thus, in this chapter it is suplemented with the rich set of descriptive and analytical tools provided by third generation activity theory (3GAT). Specifically this chapter identifies, key activity units/systems, names system elements, addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design.
 
 Firstly, I describe activity systems at different scopes, focusing on the objective of participants and drawing on a vignette illustrating indicative participant activity.
 
