restructuring introduction - informal education as a stronger motivation here

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -10,6 +10,7 @@ number-sections: true
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
+
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
     -   [Research Questions - April
@@ -62,6 +63,8 @@ title: 4. Exploration of the Formative Learning Design Process
     -   [Participant conflict associated with project navigation and use
         of
         documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
+        -   [Narrative pm the evolution of resources during
+            P2](#narrative-pm-the-evolution-of-resources-during-p2)
         -   [Quick Start Cards](#quick-start-cards)
         -   [Code snippet examples](#code-snippet-examples)
         -   [Structuring instructional tutorial
