--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -50,6 +50,8 @@
     -   [Participant conflict associated with project navigation and use
         of
         documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
+        -   [Narrative pm the evolution of resources during
+            P2](#narrative-pm-the-evolution-of-resources-during-p2)
         -   [Quick Start Cards](#quick-start-cards)
         -   [Code snippet examples](#code-snippet-examples)
         -   [Structuring instructional tutorial
