rsing to concrete in GDP chapter

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -1383,8 +1383,29 @@ Article on intangibility of game feel.
 <!-- GDPs and play-testing interact to allow participants,  to support each other and build community in a diversity of ways. -->
 
 
+## Discussion SECTION
 
-## Discussion on the use of game design patterns in the 3M learning design
+### To add here
+
+The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011].
+
+In this study , the game features are concrete 
+The concept of design patterns is abstract
+
+Around this abstract different behaviour patterns form
+And the concerpt can be embodied on design artefacts
+And can be observed an designed for
+
+The process can be transferred to other design projects
+
+
+
+    There are two types of abstractions: empirical and theoretical. Empirical abstraction
+    is a classification of superficial features of phenomena. Theoretical abstraction refers to the identification of the genetic origins of phenomena that may externally be not alike at all. A theoretical abstraction is based on a functional relationship, also called a germ cell.  While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutinyTitle: Activity theory as an activist and interventionist theory, Author: Sannino, Date: 10/2011
+
+
+
+### Discussion on the use of game design patterns in the 3M learning design
 
 The majority of this chapter has focused on interpretation of observations of participant interactions and the resulting cultural processes.  Game design patterns provide learners with a suitable vehicle to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures. The following section explores potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct. The remainder of this chapter discusses the use of game design patterns facilitate the emergence of learner agency.
 
