lnk back to inductive research

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -1389,14 +1389,17 @@ Article on intangibility of game feel.
 
 The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011].
 
-In this study , the game features are concrete 
+In this study , the game features are concrete
 The concept of design patterns is abstract
 
 Around this abstract different behaviour patterns form
-And the concerpt can be embodied on design artefacts
-And can be observed an designed for
+And the concept can be embodied on design artefacts
+And can be observed an designed for.
 
-The process can be transferred to other design projects
+In terms of a research process, this maps in part to the inductive process of thematic analysis.
+<!-- See - https://atlasti.com/research-hub/in-vivo-coding -->
+
+From the perspective of participants and facilitators, the process can be transferred to other design projects
 
 
 
