tweaking design chapter

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -113,7 +113,7 @@ title: 4. Exploration of the Formative Learning Design Process
 
 ~1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?~
 
-1. What ~barriers~ contradictions arose in participation in this research's game coding processes and what pedagogical tools and processes are available to address these contradictions?
+1. What ~barriers~ area of contradictions arose in participation in this research's game coding processes and what pedagogical tools and processes are available to address these contradictions?
 2. How can game design patterns support the development of coding practices with novices?
 3. How can learners build agency in an evolving community of game makers?
 
@@ -151,15 +151,12 @@ I originally structured the chapter around observations structured in the phases
 --- -->
 <!-- Due to the novel nature of the learning design, a detailed outline of the specifics of the participants experience of the design helps readers situate  the findings of the following two chapters. -->
 
-This chapter contains a high level of detail on the technical elements of the learning design to both both helps situate the findings of the next chapter. As explored in the last chapter this thick description and to allow the design to be by other practitioners and researchers in this area.
-
-To address these, the format of this chapter can be conceived as a design narrative [@hoadley_creating_2002]. To do to this I inlcude narrative ddescriptions of shifts between phases of design as it mutually evolved over time.
-
-While the concept of design narrative is in lnie with DBR ethos, it is not a formal or well explored area. Thus, in this chapter it is suplemented with the rich set of descriptive and analytical tools provided by third generation activity theory (3GAT). Specifically this chapter identifies, key activity units/systems, names system elements, addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design.
+This chapter contains a high level of detail on the technical elements of the learning design to situate the findings of the next chapter and to allow the design to be by other practitioners and researchers in this area. The format of this chapter can be conceived as a design narrative [@hoadley_creating_2002]. To do to this I include narrative descriptions of shifts between phases of design as it mutually evolved over time. The concept of design narrative emerged from DBR as a way to communicate the important detail of context [@hoadley_creating_2002; @brase_knowledge_2024; @bell_theoretical_2004;]. While DBR has its own language of argumentation [@brase_knowledge_2024] in this chapter creates a design narrative using the rich set of descriptive and analytical tools provided by third generation activity theory (3GAT). Specifically this chapter identifies, key activity units/systems, names system elements, addresses the evolution of the key pedagogical features of the tools of learning design used in my research process using analysis of elements of nested activity systems and emerging tensions in learning design.
 
 Firstly, I describe activity systems at different scopes, focusing on the objective of participants and drawing on a vignette illustrating indicative participant activity.
 
-Following this, I explore emerging tensions in design in a way which communicates relevant context through the analysis of three areas of emerging contradictions in activity. Here the term contradictions is used as a wrapper for more specific tensions, barriers, breakdowns, conflicts that indicate an "unfit with (system) elements [@kuutti_activity_1995].
+Following this, I explore emerging tensions in design in a way which communicates relevant context through the analysis of three areas of emerging contradictions in activity. Instead of a more technical definition [@engestrom_discursive_2011], here, in line with Kutti [-@kuutti_activity_1995], the term area of contradictions is used as a wrapper for more specific tensions, barriers, breakdowns, conflicts that indicate an "unfit with (system) elements .
+NOTE THIS NEEDS TO BE JUSTIFIED
 
 Three main areas of contradictions are explored in this chapter are as follows.
 
