--- a/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
@@ -80,11 +80,13 @@
             -   [Family funds of knowledge](#family-funds-of-knowledge)
             -   [Funds of knowledge from professional and enthusiast
                 communities](#funds-of-knowledge-from-professional-and-enthusiast-communities)
-    -   [Discussion on the use of game design patterns in the 3M
-        learning
-        design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
-        -   [Design patterns as a mid-level pedagogical
-            framework](#design-patterns-as-a-mid-level-pedagogical-framework)
+    -   [Discussion SECTION](#discussion-section)
+        -   [To add here](#to-add-here)
+        -   [Discussion on the use of game design patterns in the 3M
+            learning
+            design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
+            -   [Design patterns as a mid-level pedagogical
+                framework](#design-patterns-as-a-mid-level-pedagogical-framework)
         -   [Discussion on GDPs](#discussion-on-gdps)
             -   [GDPs used in mediational strategies and impact on
                 participant
