--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -1,95 +1,104 @@
 -   [Exploration of the Formative Learning Design
-    Process](#exploration-of-the-formative-learning-design-process)
+    Process](#exploration-of-the-formative-learning-design-process){#toc-exploration-of-the-formative-learning-design-process}
     -   [Research Questions - April
-        2024](#research-questions---april-2024)
-    -   [A note on style](#a-note-on-style)
-    -   [Chapter Introduction](#chapter-introduction)
+        2024](#research-questions---april-2024){#toc-research-questions---april-2024}
+    -   [A note on style](#a-note-on-style){#toc-a-note-on-style}
+    -   [Chapter
+        Introduction](#chapter-introduction){#toc-chapter-introduction}
     -   [Analysis of dimensions of game making activity using 3GAT
-        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
+        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework){#toc-analysis-of-dimensions-of-game-making-activity-using-3gat-framework}
         -   [Environmental factors and
-            objectives](#environmental-factors-and-objectives)
+            objectives](#environmental-factors-and-objectives){#toc-environmental-factors-and-objectives}
         -   [Broader activity system - a novice game making community
             making games as a learning
-            experience](#broader-activity-system---a-novice-game-making-community-making-games-as-a-learning-experience)
+            experience](#broader-activity-system---a-novice-game-making-community-making-games-as-a-learning-experience){#toc-broader-activity-system---a-novice-game-making-community-making-games-as-a-learning-experience}
             -   [Illustrative vignette on participants activity
                 indicating general activity of
-                participants](#illustrative-vignette-on-participants-activity-indicating-general-activity-of-participants)
+                participants](#illustrative-vignette-on-participants-activity-indicating-general-activity-of-participants){#toc-illustrative-vignette-on-participants-activity-indicating-general-activity-of-participants}
         -   [Constructing a game feature by
-            feature](#constructing-a-game-feature-by-feature)
+            feature](#constructing-a-game-feature-by-feature){#toc-constructing-a-game-feature-by-feature}
         -   [Smaller objectives and actions - Implementing discrete code
             and design
-            structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
+            structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures){#toc-smaller-objectives-and-actions---implementing-discrete-code-and-design-structures}
             -   [Applying activity theory to surface contradictions and
                 design tensions experienced by participants and
-                facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
+                facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators){#toc-applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators}
     -   [Summative narrative description of evolution by
-        phaser](#summative-narrative-description-of-evolution-by-phaser)
+        phaser](#summative-narrative-description-of-evolution-by-phaser){#toc-summative-narrative-description-of-evolution-by-phaser}
     -   [Contradictions involving the use of game programming and asset
         authoring
-        tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-        -   [Situating tool use by phase](#situating-tool-use-by-phase)
+        tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools){#toc-contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools}
+        -   [Situating tool use by
+            phase](#situating-tool-use-by-phase){#toc-situating-tool-use-by-phase}
         -   [Narrative description of the area of
-            contradiction](#narrative-description-of-the-area-of-contradiction)
+            contradiction](#narrative-description-of-the-area-of-contradiction){#toc-narrative-description-of-the-area-of-contradiction}
         -   [Using a starter game
-            template](#using-a-starter-game-template)
+            template](#using-a-starter-game-template){#toc-using-a-starter-game-template}
             -   [Variable editing for player
-                movement](#variable-editing-for-player-movement)
-            -   [Simple block graphics](#simple-block-graphics)
+                movement](#variable-editing-for-player-movement){#toc-variable-editing-for-player-movement}
+            -   [Simple block
+                graphics](#simple-block-graphics){#toc-simple-block-graphics}
             -   [Level design and
-                prototyping](#level-design-and-prototyping)
+                prototyping](#level-design-and-prototyping){#toc-level-design-and-prototyping}
         -   [Design adaptations to facilitate novice use of a code
-            playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
+            playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground){#toc-design-adaptations-to-facilitate-novice-use-of-a-code-playground}
             -   [Remixing and community
-                inspiration](#remixing-and-community-inspiration)
+                inspiration](#remixing-and-community-inspiration){#toc-remixing-and-community-inspiration}
             -   [Addressing code syntax
-                errors](#addressing-code-syntax-errors)
+                errors](#addressing-code-syntax-errors){#toc-addressing-code-syntax-errors}
             -   [Distributed vs. self-contained approaches to asset
-                creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
+                creation](#distributed-vs.-self-contained-approaches-to-asset-creation){#toc-distributed-vs.-self-contained-approaches-to-asset-creation}
         -   [Observations on the game template and core
-            tools](#observations-on-the-game-template-and-core-tools)
+            tools](#observations-on-the-game-template-and-core-tools){#toc-observations-on-the-game-template-and-core-tools}
     -   [Participant conflict associated with project navigation and use
         of
-        documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
+        documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation){#toc-participant-conflict-associated-with-project-navigation-and-use-of-documentation}
         -   [Narrative pm the evolution of resources during
-            P2](#narrative-pm-the-evolution-of-resources-during-p2)
-        -   [Quick Start Cards](#quick-start-cards)
-        -   [Code snippet examples](#code-snippet-examples)
+            P2](#narrative-pm-the-evolution-of-resources-during-p2){#toc-narrative-pm-the-evolution-of-resources-during-p2}
+        -   [Quick Start
+            Cards](#quick-start-cards){#toc-quick-start-cards}
+        -   [Code snippet
+            examples](#code-snippet-examples){#toc-code-snippet-examples}
         -   [Structuring instructional tutorial
-            chapters](#structuring-instructional-tutorial-chapters)
+            chapters](#structuring-instructional-tutorial-chapters){#toc-structuring-instructional-tutorial-chapters}
         -   [Theming the a collection of game design patterns to aid
-            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation){#toc-theming-the-a-collection-of-game-design-patterns-to-aid-navigation}
     -   [Responding to tensions and barriers in cultural aspects of the
         game making
-        activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
+        activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity){#toc-responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity}
         -   [Design narrative on conflict due to identity clashes and
             dysfunctional group
-            work](#design-narrative-on-conflict-due-to-identity-clashes-and-dysfunctional-group-work)
-            -   [Shift from p1 - p2 -](#shift-from-p1---p2--)
-        -   [REMOVED](#removed)
+            work](#design-narrative-on-conflict-due-to-identity-clashes-and-dysfunctional-group-work){#toc-design-narrative-on-conflict-due-to-identity-clashes-and-dysfunctional-group-work}
+            -   [Shift from p1 - p2
+                -](#shift-from-p1---p2--){#toc-shift-from-p1---p2--}
+        -   [REMOVED](#removed){#toc-removed}
         -   [Playtesting as a cultural
-            process](#playtesting-as-a-cultural-process)
+            process](#playtesting-as-a-cultural-process){#toc-playtesting-as-a-cultural-process}
             -   [Playtesting and embodied participation in the games of
-                others](#playtesting-and-embodied-participation-in-the-games-of-others)
+                others](#playtesting-and-embodied-participation-in-the-games-of-others){#toc-playtesting-and-embodied-participation-in-the-games-of-others}
             -   [Local playtesting rather than participation with a
                 wider online
-                community](#local-playtesting-rather-than-participation-with-a-wider-online-community)
+                community](#local-playtesting-rather-than-participation-with-a-wider-online-community){#toc-local-playtesting-rather-than-participation-with-a-wider-online-community}
         -   [Shift to P3 Drama process and what kind of Maker are
-            you](#shift-to-p3-drama-process-and-what-kind-of-maker-are-you)
-        -   [On a drama processes](#on-a-drama-processes)
+            you](#shift-to-p3-drama-process-and-what-kind-of-maker-are-you){#toc-shift-to-p3-drama-process-and-what-kind-of-maker-are-you}
+        -   [On a drama
+            processes](#on-a-drama-processes){#toc-on-a-drama-processes}
             -   [Description drama process using extracts from vignettes
                 and concepts of
-                MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe)
+                MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe){#toc-description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe}
             -   [Use of side missions to encourage varied creative
-                practices](#use-of-side-missions-to-encourage-varied-creative-practices)
+                practices](#use-of-side-missions-to-encourage-varied-creative-practices){#toc-use-of-side-missions-to-encourage-varied-creative-practices}
             -   [Observations on written interactions with the alien in
                 the
-                drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
+                drama](#observations-on-written-interactions-with-the-alien-in-the-drama){#toc-observations-on-written-interactions-with-the-alien-in-the-drama}
             -   [Concluding remarks on process
-                drama](#concluding-remarks-on-process-drama)
-    -   [Chapter Discussion](#chapter-discussion)
+                drama](#concluding-remarks-on-process-drama){#toc-concluding-remarks-on-process-drama}
+    -   [Chapter
+        Discussion](#chapter-discussion){#toc-chapter-discussion}
         -   [Summary of barriers and tensions explored in this
-            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
+            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter){#toc-summary-of-barriers-and-tensions-explored-in-this-chapter}
             -   [Exploring dimensions of these barriers through the lens
                 of agency and
-                authenticity](#exploring-dimensions-of-these-barriers-through-the-lens-of-agency-and-authenticity)
-        -   [Link to next chapter](#link-to-next-chapter)
+                authenticity](#exploring-dimensions-of-these-barriers-through-the-lens-of-agency-and-authenticity){#toc-exploring-dimensions-of-these-barriers-through-the-lens-of-agency-and-authenticity}
+        -   [Link to next
+            chapter](#link-to-next-chapter){#toc-link-to-next-chapter}
