--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -155,8 +155,9 @@ This chapter contains a high level of detail on the technical elements of the le
 
 Firstly, I describe activity systems at different scopes, focusing on the objective of participants and drawing on a vignette illustrating indicative participant activity.
 
-Following this, I explore emerging tensions in design in a way which communicates relevant context through the analysis of three areas of emerging contradictions in activity. Instead of a more technical definition [@engestrom_discursive_2011], here, in line with Kutti [-@kuutti_activity_1995], the term area of contradictions is used as a wrapper for more specific tensions, barriers, breakdowns, conflicts that indicate an "unfit with (system) elements .
-NOTE THIS NEEDS TO BE JUSTIFIED
+Following this, I explore shifts in the design of the intevention.
+
+tensions in design in a way which communicates relevant context through the analysis of three areas of emerging contradictions in activity. In line with Kutti [-@kuutti_activity_1995], the term area of contradictions is used as a wrapper for more specific tensions, barriers, breakdowns, conflicts that indicate an "unfit with (system) elements .
 
 Three main areas of contradictions are explored in this chapter are as follows.
 
@@ -171,54 +172,133 @@ This chapter ends with a synthesis to initial barriers to engaging in game makin
 MOVE TO DISCUSSION IF THERE IS A SUITABLE SPACE
 The drama process is an example of an introduced cultural tool. The process acts as wrapper to several supporting techniques. the side missions to and to sanction different approaches, the imagined audience encourages reflection and semi-authentic approaches. It is the most advanced tools of a range that was put into place to create a space suitable for creativity, collaboration and self expression.
 
+## Summary of design evolution
 
-<!-- - Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions. -->
-
-<!-- The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice. -->
-
-<!-- One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed. Another was to help support the development of peer learning practices and in order to do that help foster a creative environment which suited that. -->
-
-<!-- **Methodology for exposing tensions**
-
-Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design.
-
-The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency.
-
-In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools. -->
+I conclude this chapter with a section that introduces the next chapter which is a rich description of the evolution of the learning design.
 
 
-<!-- The design description is framed within DBR language and concepts. -->
-<!-- Section describing  Game Design Patterns as  the main unit of Activity. See Blunden to frame this and to describe the utility of the idea  [@blundenInterdisciplinaryConceptActivity2009; @blundenGermCellUnit2014]. -->
 
-<!--
-There's lots to add in here.
-chapters\planning\methodology_chapter\methodology_chapter_late_2020.odt.md
-https://drive.google.com/drive/u/1/folders/1D-VhVj-NgN3qgk3YEx4HZEozf_1UOGtE
+### On the details of the design
+
+
+
+
+### Phases and resources of the study
+
+
+
+More than a design the result was a dynamic community which is analysed on several scopes of activity.
+
+
+
+[Summary Table of Stages](https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#)
+see updated table in tables subdirectory  
+
+
+The following overview of activity use by stage focusing on the evolution of tools and processes concisely exploring the rationale for their selection or production. Fuller descriptions of the tools used at each stage and links to the online resources created are available as appendix 4.x
+
+NOTE - PERHAPS Move to appendix - But mention here.
+
+**Phase, Name and Date**| **Description** | **Starting Resources**         
+|--------|------------|--------------|
+|P1: Oct 2017 - Dec 2018; Experimental Course  | Participants started with no set plan or toolset and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. After several weeks, a minimal incomplete starting game code template was introduced in response to student need.  Then One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students and the creation of a “half baked” game template |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
+| P2: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
+| P3: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
+| P4: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
+
+
+#### P1: Exploratory stage: Oct 2017 - Dec 2018
+
+<!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
+<!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
+
+Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. This template was adapted from an online tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. Generalised feedback from participants this stage included; a consensus that the process was too long; more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful; group work was problematic given the lack of experience in this domain; and that the overall experience of working with code was difficult but rewarding (feedback notes are included as appendix 4.x). At the end of this phase I responded to this feedback and delivered three one-off workshops at conferences and community events. The compressed time frame sparked the use of new tools including a starting template and printable resources to accelerate the game-production process. The results in terms of engagement and impact on rapid personalisation of end products were very promising.
+
+<!-- The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process. -->
+
+<!-- The first phase of delivery in late 2018 was based on initial research stage; I drew on literature to identify factors to consider when designing for collaboration, adopting a project based approach inspired by design thinking.  -->
+<!-- To inculcate parents and children in to the culture of retro video games I began initial sessions by inviting participants to older arcade games on laptops. -->
+<!-- Game filled laptops.  
+Should this be added to the table above
+-->
+<!-- The tools allow participants to create games using a combination of a free to use online tools.
+an online  coding environment
+using the phaser javascript game library (glitch.com), a pixel art editor (piskelapp.com), and a sound effect generator (sfbgames.com/chiptone). -->
+
+<!-- Have a look at this document which outlines Structuring and Scaffolding Phaser Activities from Phaser Book
+https://docs.google.com/document/d/1lk-8dHFFNbFXFtE5vV6_GHXYRzU7ATWZAIe-hNunyx8/edit#
  -->
 
-<!-- As per Rogoff's analysis of informal learning in museaums [], the process of finding a medium between structured activity and authentic activity can be challenging.
+<!-- #### The half-baked starting platformer game
 
-The kinds of exhibits which invite extended play are of interest to this study. Such design indicates that there are affordances that invite revised design, tinkering and ongoing play.
--->
+NOTE - ALSO EXPLORED IN NEXT CHAPTER - HOW TO ARRANGE?
 
-<!-- **Cultural influences on my choice of learning design**
-NOTE - MOVE TO INTRO  - NO NEED
+The use and design characteristics of the starting point of a half-baked game.
 
-I set up the working pattern based on my professional experiences and my own academic and cultural interests. As mentioned in the introduction, DIY culture, remix culture, repair culture, TAZ events are strong influences to the learning design based on the ideals of an autonomous community.
-
- - a desire to increase engagement based on my experiences in classroom and out of classroom - Home Ed / coder dojo experiences
- - the link to cultural practices of code patching and remixing - the example of the plumber coder potentially being someone who finishes the job rather than elegant coder.
- - other experiences of social coding being important being part of a community working on a joint project (add a quote from Dave?)
- <!-- - A walled garden approach in terms of the GDP and code documentation and examples that are used. Based on my own experience of developer documentation and varied coding approaches.
-- Other examples from the interviews with practitioners are relevant to include here. -->
+- Phaser 2 to avoid complexity of code structure
+- 2D platformer - familiar to most - Mario and Sonic
+- low-spec graphics
+- game of player, platforms, and coins to collect and hazards to avoid.
+- graphical level design
+- key variables brought to the top
+- simple structure of code in terms of aligning with framework and not adding extra functions
 
 
-<!-- These sections could follow a pattern of
- - rogoff's description / examples - but likely include a larger breakdown of 3 foci in Methodology Chapter.
- - my model examples
- - other links to PBL frameworks and/or educational concepts and contrast analysis
+**Variable editing effective movement**
 
-In the 3 foci model Rogoff refers to apprenticeship as a way of illustrating the process of being inculcated into community practices existing in a cultural plane. AN EXAMPLE .. -->
+Player movement was a key to playtesting feedback as such three  key variables were highlighted at the very start of the game code and given descriptive names to facilitate their editing. When testing the game, the player's jump height was not great enough to allow progression up from the floor to one of the platform thus thwarting the collection of items.
+
+Game progression require altering at least one of the descriptively names variables associated with jump height and then activating a preview window to observer the changes by playing the game in a new browser tab.
+<!--FIND  Some evidence of building proficiency with significant work to change these three   
+
+    // Variables that change how the player moves
+    var gravity = 500;
+    var velocity_x = 100;
+    var velocity_y = 300;
+
+While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others were much less concerted with this aspect of game play, lowering gravity drastically to allow a greater jump size but a more frustrating floaty jump.
+
+**Level design and prototyping**
+
+The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Image 4.x above show a printable _quick start_ cards to aid participants to begin the process of changing level design.
+
+As preThe possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure.
+
+The vignette in the last chapter saw Toby's adding new levels to his  game and undertaking many iterations of changes to the level design. He and several other participants spent extensive time performing level design activity with a goal of making the game extremely challenging but still technically possible. Others played with the convention of the game by removing all hazards and filling the screen with rewards/coins (an example is outlined in the starting vignette of the next chapter).
+
+**Incomplete graphical blocks & Piskel**
+
+The use of blank, coloured blocks of 32 x 32 pixels encouraged participants to change the graphical design and the relatively small size of the sprites encouraged rapid design.
+
+PERHAPS REPLACE THIS WITH SCREEN SHOT OF PISKEL AS A TOOL
+![](./Pictures/whale_1.png){width=50%}
+
+The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using   code syntax.
+
+**Incomplete graphical blocks & Piskel**
+
+The
+
+PARK FOR NOW - Maybe move to Design
+The concept of the feel of the game or the challenges maps to the Dynamics of MDA framework.
+ -->
+
+
+#### P3: Accelerated game making programme (5 weeks): Jan - Feb 2019
+
+By the beginning of P2 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the template that stemmed from participant feedback and my reflections. Key additions at this stage to support the use of a template were a collection of tutorials and code examples illustrating key game features that had been requested by participants. The collection of game patterns were presented in a web page together with the starting template and a link to an online book collecting the process into step-by-step chapter based tutorials. The resources are explored in more depth in sections three and four below. A more complete description of the resources used in P2 and P3 are included in appendix 4.x.The experimental team consisted of Home Educating families . Learners acted as researcher participants to guide the next iteration of the game making program both directly and indirectly.
+
+Direct input was through requests and informal feedback and structured end-of-course interviews. Indirect input came from research data in the form on the games participants created, my research journal entries on my interactions with and observations of participants and recorded audio and video data of the participants and their computer screen capture.
+
+#### P4: Adding a process drama to the game making programme: April - May 2019
+
+P3 used the same toolset as P2 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens. The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
+
+<!-- #### P4: Adapting to MakeCode Arcade and more formal settings: Jan 2020 - September 2020
+
+I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter. In 2019 MakeCode Arcade was launched to make games using for novice coders via the use of a block coding approach. In 2020 I ran two iterations of game making course using MakeCode Arcade. The facilitation techniques and approach were adapted from those of P2 to facilitate the use of the block coding language [^1]. Tool use at this stage is also explored in a chapter in a collection on K-12 computing education [@chesterman_game_2023].
+
+This thesis draws for the most part on data from P2 and P3 and thus focuses on text-based coding as a primary method. -->
 
 
 <!-- At this stage of writing I include a bullet point list of design relevant features to be expanded later.
@@ -243,6 +323,9 @@ Toby then decides he wants to add a new element to his game.
 He browses the list of game design patterns.
 There is a tension where he is hesitant about where to place code.
 Screen shot of the menu of choices. -->
+
+
+
 
 
 ## Analysis of dimensions of game making activity using 3GAT framework
