tocs and formative intervention shifted

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -10,13 +10,25 @@ number-sections: true
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
     -   [Research Questions - April
         2024](#research-questions---april-2024)
     -   [A note on style](#a-note-on-style)
     -   [Chapter Introduction](#chapter-introduction)
+    -   [Summary of design evolution](#summary-of-design-evolution)
+        -   [On the details of the
+            design](#on-the-details-of-the-design)
+        -   [Phases and resources of the
+            study](#phases-and-resources-of-the-study)
+            -   [P1: Exploratory stage: Oct 2017 - Dec
+                2018](#p1-exploratory-stage-oct-2017---dec-2018)
+            -   [P3: Accelerated game making programme (5 weeks): Jan -
+                Feb
+                2019](#p3-accelerated-game-making-programme-5-weeks-jan---feb-2019)
+            -   [P4: Adding a process drama to the game making
+                programme: April - May
+                2019](#p4-adding-a-process-drama-to-the-game-making-programme-april---may-2019)
     -   [Analysis of dimensions of game making activity using 3GAT
         framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
         -   [Environmental factors and
@@ -174,13 +186,12 @@ The drama process is an example of an introduced cultural tool. The process acts
 
 ## Summary of design evolution
 
-I conclude this chapter with a section that introduces the next chapter which is a rich description of the evolution of the learning design.
+This chapter which is a rich description of the evolution of the learning design.
 
+This section summarises phases of design.
 
 
 ### On the details of the design
-
-
 
 
 ### Phases and resources of the study
