--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -4,6 +4,19 @@
         2024](#research-questions---april-2024)
     -   [A note on style](#a-note-on-style)
     -   [Chapter Introduction](#chapter-introduction)
+    -   [Summary of design evolution](#summary-of-design-evolution)
+        -   [On the details of the
+            design](#on-the-details-of-the-design)
+        -   [Phases and resources of the
+            study](#phases-and-resources-of-the-study)
+            -   [P1: Exploratory stage: Oct 2017 - Dec
+                2018](#p1-exploratory-stage-oct-2017---dec-2018)
+            -   [P3: Accelerated game making programme (5 weeks): Jan -
+                Feb
+                2019](#p3-accelerated-game-making-programme-5-weeks-jan---feb-2019)
+            -   [P4: Adding a process drama to the game making
+                programme: April - May
+                2019](#p4-adding-a-process-drama-to-the-game-making-programme-april---may-2019)
     -   [Analysis of dimensions of game making activity using 3GAT
         framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
         -   [Environmental factors and
